Fixing video and logo size on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -56,6 +56,7 @@ nav{padding:15px 0;position:fixed;width:100%;z-index:10;}
 @media only screen and (max-width:480px){
   nav{display:none;} .header{padding:20px 0;} .logo-name{font-size:4em;} .tagline{margin-bottom:15px;font-size:1.4em;} .call-action-area .price{font-size:2em;margin:0 0 15px;display:block;} .call-action-area .call-action-link,.btn{top:0;} h2,h3,h4{font-size:3em;} h3{font-size:2em;} h4{font-size:1.8em;} p{font-size:1.4em;} .content{padding:0;} .content section{padding-top:50px;} .speakers-item{min-height:70px;padding-left:70px;} .speaker-photo{width:50px;height:50px;} .speech-title{padding-top:0;font-size:16px;margin-bottom:.3em;} .speech-time{font-size:16px;padding:0;} .speakers-bio{display:none;}
   .partner-link.diamond{width: 220px;}
+  .video iframe{width: 280px!important;}
 }
 
 @media only screen and (max-width:321px){
@@ -64,6 +65,7 @@ nav{padding:15px 0;position:fixed;width:100%;z-index:10;}
   .sponsor-link,.partner-link{width:115px;height:115px;line-height:115px;}
   nav .date{margin-top: 10px;}
   .partner-link.diamond{width: 140px;}
+  .video iframe{width: 250px!important;}
 }
 
 html{background:#F2CAA7;font:normal normal 10px/1.2em helvetica,arial,sans-serif;color:#260B01;}
